# mobisane

./: CMakeLists.txt  README.md
android/: settings.gradle
android/app/: build.gradle
android/app/src/androidTest/java/com/p12tic/mobisane/: ExampleInstrumentedTest.java
android/app/src/main/: AndroidManifest.xml
android/app/src/main/cpp/: CMakeLists.txt  anativewindow_ref.h  app_manager.cc  app_manager.h  camera.cpp  camera.h  log_utils.cc  log_utils.h  mobisane.cpp
android/app/src/main/java/com/p12tic/mobisane/: FirstFragment.java  MainActivity.java  NativeAppManager.java  NativeCamera.java  ResourceDownloadAsyncTask.java  SecondFragment.java
android/app/src/main/res/layout/: activity_main.xml
android/app/src/main/res/menu/: menu_main.xml
android/app/src/main/res/navigation/: nav_graph.xml
android/app/src/main/res/values/: strings.xml  themes.xml
android/app/src/main/res/values-night/: themes.xml
android/app/src/test/java/com/p12tic/mobisane/: ExampleUnitTest.java
cli/: CMakeLists.txt  main.cc
common/: CMakeLists.txt  adjacency_grid.h  algorithm.h  bounds_detection_params.cc  bounds_detection_params.h  bounds_detection_pipeline.cc  bounds_detection_pipeline.h  edge_calculator_precise.cc  edge_calculator_precise.h  edge_sfm.cc  edge_sfm.h  edge_utils.cc  edge_utils.h  edge_utils_internal.h  export_ply.cc  export_ply.h  feature_extraction_job.cc  feature_extraction_job.h  finally.h  flood_fill_utils.cc  flood_fill_utils.h  geometry_utils.cc  geometry_utils.h  image_debug_utils.cc  image_debug_utils.h  image_utils.cc  image_utils.h  longest_line_recognizer.cc  longest_line_recognizer.h  matrix_types.h  mean_flood_fill.cc  mean_flood_fill.h  parallel_alicevision.cc  parallel_alicevision.h  parallel_tesseract.cc  parallel_tesseract.h  segment_calculator_precise.cc  segment_calculator_precise.h  sfm_refpoints.cc  sfm_refpoints.h  (+7 more)
common/bff/: Bff.cpp  Bff.h  Cholesky.h  Corner.cpp  Corner.h  CutIterator.h  CutIterator.inl  DenseMatrix.h  DenseMatrix.inl  Distortion.cpp  Distortion.h  Edge.cpp  Edge.h  Face.cpp  Face.h  HalfEdge.cpp  HalfEdge.h  Mesh.cpp  Mesh.h  MeshData.h  MeshData.inl  MeshIO.cpp  MeshIO.h  SparseMatrix.h  SparseMatrix.inl  Types.h  Vector.h  Vector.inl  Vertex.cpp  Vertex.h
common/edgegraph3d/: plg_edge_manager.cpp  plg_edge_manager.hpp  sfm_data.h  types.hpp
common/edgegraph3d/filtering/: filtering_close_plgps.cpp  filtering_close_plgps.hpp  gauss_newton.cpp  gauss_newton.hpp  outliers_filtering.cpp  outliers_filtering.hpp
common/edgegraph3d/io/input/: convert_edge_images_pixel_to_segment.cpp  convert_edge_images_pixel_to_segment.hpp
common/edgegraph3d/matching/consensus_manager/: plgp_consensus_manager.cpp  plgp_consensus_manager.hpp  plgpcm_3views_plg_following.cpp  plgpcm_3views_plg_following.hpp
common/edgegraph3d/matching/plg_matching/: pipelines.cpp  pipelines.hpp  plg_matches_manager.cpp  plg_matches_manager.hpp  plg_matching.cpp  plg_matching.hpp  plg_matching_from_refpoints.cpp  plg_matching_from_refpoints.hpp  polyLine_2d_map.cpp  polyLine_2d_map_search.cpp  polyline_2d_map.hpp  polyline_2d_map_search.hpp  polyline_matching.cpp  polyline_matching.hpp
common/edgegraph3d/matching/polyline_matching/: polyline_matcher.cpp  polyline_matcher.hpp
common/edgegraph3d/plgs/: graph.hpp  graph_adjacency_list.hpp  graph_adjacency_set_no_type.cpp  graph_adjacency_set_no_type.hpp  graph_adjacency_set_undirected_no_type.cpp  graph_adjacency_set_undirected_no_type.hpp  graph_adjacency_set_undirected_no_type_weighted.cpp  graph_adjacency_set_undirected_no_type_weighted.hpp  graph_no_type.cpp  graph_no_type.hpp  polyline_2d.cpp  polyline_2d.hpp  polyline_3d.cpp  polyline_3d.hpp  polyline_graph_2d.cpp  polyline_graph_2d.hpp  polyline_graph_2d_hmap_impl.cpp  polyline_graph_2d_hmap_impl.hpp  polyline_graph_3d.cpp  polyline_graph_3d.hpp  polyline_graph_3d_hmap_impl.cpp  polyline_graph_3d_hmap_impl.hpp  polyline_graph_point_2d.hpp  polyline_interval_2d.hpp  polyline_point_2d.hpp
common/edgegraph3d/utils/: data_bundle.hpp  datatypes.hpp  drawing_utilities.cpp  drawing_utilities.hpp  edge_graph_3d_utilities.cpp  edge_graph_3d_utilities.hpp  geometric_utilities.cpp  geometric_utilities.hpp  triangulation.cpp  triangulation.hpp
common/edgegraph3d/utils/globals/: global_defines.hpp
common/shaders/: cmds.sh  render_unfolded.frag  render_unfolded.vert  render_unfolded_frag.h  render_unfolded_frag.spv  render_unfolded_vert.h  render_unfolded_vert.spv
common/vkutils/: VulkanAndroid.cpp  VulkanAndroid.h  VulkanBuffer.cpp  VulkanBuffer.h  VulkanDebug.cpp  VulkanDebug.h  VulkanDevice.cpp  VulkanDevice.h  VulkanInitializers.h  VulkanTools.h
ios/Mobisane/: AppDelegate.h  AppDelegate.mm  AppManager.h  AppManager.mm  CameraView.h  CameraView.mm  ImageCaptureConsumer.h  ImageCaptureConsumer.mm  Info.plist  PreviewCaptureConsumer.h  PreviewCaptureConsumer.mm  SceneDelegate.h  SceneDelegate.mm  Utils.h  Utils.mm  VideoCapture.h  VideoCapture.mm  ViewController.h  ViewController.mm  main.mm
ios/Mobisane.xcodeproj/: project.pbxproj
ios/Mobisane/Base.lproj/: Main.storyboard
ios/MobisaneTests/: MobisaneTests.m  MobisaneTests.mm
ios/MobisaneUITests/: MobisaneUITests.m  MobisaneUITests.mm  MobisaneUITestsLaunchTests.mm
test/: CMakeLists.txt  adjacency_grid.cc  edge_utils.cc  geometry_utils.cc  main.cc
